; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/desk/extr_screensaver.c_WaitForSettingsDialog.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/desk/extr_screensaver.c_WaitForSettingsDialog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@TRUE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8
@INFINITE = common dso_local global i32 0, align 4
@QS_ALLINPUT = common dso_local global i32 0, align 4
@WAIT_OBJECT_0 = common dso_local global i64 0, align 8
@PM_REMOVE = common dso_local global i32 0, align 4
@WM_QUIT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32)* @WaitForSettingsDialog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @WaitForSettingsDialog(i32 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_6__, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  br label %8

8:                                                ; preds = %50, %2
  %9 = load i64, i64* @TRUE, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %51

11:                                               ; preds = %8
  %12 = load i64, i64* @FALSE, align 8
  %13 = load i32, i32* @INFINITE, align 4
  %14 = load i32, i32* @QS_ALLINPUT, align 4
  %15 = call i64 @MsgWaitForMultipleObjects(i32 1, i32* %5, i64 %12, i32 %13, i32 %14)
  store i64 %15, i64* %6, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* @WAIT_OBJECT_0, align 8
  %18 = add nsw i64 %17, 1
  %19 = icmp eq i64 %16, %18
  br i1 %19, label %20, label %42

20:                                               ; preds = %11
  %21 = load i32, i32* @PM_REMOVE, align 4
  %22 = call i64 @PeekMessage(%struct.TYPE_6__* %7, i32* null, i32 0, i32 0, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %39

24:                                               ; preds = %20
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @WM_QUIT, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %24
  %30 = load i64, i64* @FALSE, align 8
  store i64 %30, i64* %3, align 8
  br label %51

31:                                               ; preds = %24
  %32 = load i32, i32* %4, align 4
  %33 = call i64 @IsDialogMessage(i32 %32, %struct.TYPE_6__* %7)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %31
  %36 = call i32 @TranslateMessage(%struct.TYPE_6__* %7)
  %37 = call i32 @DispatchMessage(%struct.TYPE_6__* %7)
  br label %38

38:                                               ; preds = %35, %31
  br label %41

39:                                               ; preds = %20
  %40 = load i64, i64* @FALSE, align 8
  store i64 %40, i64* %3, align 8
  br label %51

41:                                               ; preds = %38
  br label %50

42:                                               ; preds = %11
  %43 = load i64, i64* %6, align 8
  %44 = load i64, i64* @WAIT_OBJECT_0, align 8
  %45 = icmp eq i64 %43, %44
  br i1 %45, label %46, label %48

46:                                               ; preds = %42
  %47 = load i64, i64* @TRUE, align 8
  store i64 %47, i64* %3, align 8
  br label %51

48:                                               ; preds = %42
  %49 = load i64, i64* @FALSE, align 8
  store i64 %49, i64* %3, align 8
  br label %51

50:                                               ; preds = %41
  br label %8

51:                                               ; preds = %29, %39, %46, %48, %8
  %52 = load i64, i64* %3, align 8
  ret i64 %52
}

declare dso_local i64 @MsgWaitForMultipleObjects(i32, i32*, i64, i32, i32) #1

declare dso_local i64 @PeekMessage(%struct.TYPE_6__*, i32*, i32, i32, i32) #1

declare dso_local i64 @IsDialogMessage(i32, %struct.TYPE_6__*) #1

declare dso_local i32 @TranslateMessage(%struct.TYPE_6__*) #1

declare dso_local i32 @DispatchMessage(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
